--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,4 +1,4 @@
-<input type="text"  placeholder="Project Title"/>
-<input type="file"  placeholder="Project Image"/>
-<textarea placeholder="Project Description"></textarea>
+<input type="text" class="title" placeholder="Project Title"/>
+<input type="file" class="imgUrl" placeholder="Project Image"/>
+<textarea class="description" placeholder="Project Description"></textarea>
 <button ng-click="addProject">Submit</button>
