--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,2 +1,6 @@
-<h1>{{project.title}}</h1>
-<p>{{project.description}}</p>
+<div ng-controller="ProjCtrl">
+	<h1>{{project.title}}</h1>
+	<p>
+		{{project.description}}
+	</p>
+</div>
