--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div ng-controller="MainCtrl">
 	<div class="jumbotron">
 		<p>
-			<a class="btn btn-lg btn-success" ng-href="#" ng-click="saveData()">Splendid!</a>
+			<a class="btn btn-lg btn-success" ng-href="#/admin" >Admin Woo!</a>
 		</p>
 	</div>
 
