--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,4 +1,5 @@
 <div ng-controller="ProjCtrl">
+	<img src="/images/{{project.imgUrl}}" />
 	<h1>{{project.title}}</h1>
 	<p>
 		{{project.description}}
