--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,7 +1,9 @@
 <div ng-controller="ProjCtrl">
-	<img src="/images/{{project.imgUrl}}" />
-	<h1>{{project.title}}</h1>
-	<p>
-		{{project.description}}
-	</p>
+	<img class="img-rounded img-responsive" src="/images/{{project.imgUrl}}" />
+	<div>
+		<h1>{{project.title}}</h1>
+		<p>
+			{{project.description}}
+		</p>
+	</div>
 </div>
